Fix nav link margin on mobile

--- a/themes/enertec/assets/styles/enertec.scss
+++ b/themes/enertec/assets/styles/enertec.scss
@@ -1021,7 +1021,7 @@ Responsive
     }
 
     .c-header:not(.sticky) .c-header__bottom .c-nav__link{
-        margin-left: 0;
+        margin-left: 0 !important;
     }
 }
 
